# 4_1-ros2

./: CLAUDE.md  README.md  README_flow.md  rapi5_launch.py
Launch_file/: README.md  sim_launch.py
camera_ros2/: package.xml
dxl_rapi5/: CMakeLists.txt  package.xml
dxl_rapi5/launch/: pi5_launch.py
dxl_rapi5/src/: dxl_sub.cpp
dxl_wsl/: CMakeLists.txt
dxl_wsl/launch/: wsl2_launch.py
lidardrive/: CMakeLists.txt  README.md  package.xml
lidardrive/src/: lidardrive.cpp
lidarplot/: CMakeLists.txt  package.xml  readme.md
lidarplot/src/: lidarplot.cpp
lidarsave/: CMakeLists.txt  README.md  package.xml
lidarsave/src/: lidarsave.cpp
lidarsim/: CMakeLists.txt  README.md  package.xml
lidarsim/src/: lidarsim.cpp
linedetect_rapi5/: CMakeLists.txt  package.xml
linedetect_rapi5/src/: cam_pub.cpp  pub.cpp
linedetection/: README.md
linedetection/linedetect_nano/: package.xml
linedetection/linedetect_nano/src/: pub.cpp
linedetection/linedetect_wsl/: CMakeLists.txt  package.xml
linedetection/linedetect_wsl/include/linedetect_wsl/: sub.hpp
linedetection/linedetect_wsl/src/: sub.cpp
linetracer_real/: BLOCK_DIAGRAM.md  CMakeLists.txt  PERCEPTION_DECISION.md  README.md  linetracer_realConfig.cmake.in  linetracer_realConfigVersion.cmake.in  linetracer_real_block.drawio  package.xml  ros2.drawio  ros2_old.drawio
linetracer_real/include/linetracer_real/: linetracer_real.hpp
linetracer_real/src/: linetracer_real.cpp  main.cpp
linetracer_sim/: CMakeLists.txt  README.md  linetracer.cpp  package.xml
linetracer_sim/src/: dxl_subscriber.cpp  line_controller.cpp  video_publisher.cpp
py_launch_example/: README.md  package.xml  setup.py
py_launch_example/launch/: my_launch.py
py_launch_example/py_launch_example/: pub.py  sub.py
ros2_ws/linedetection/: README.md
src/dxl_nano/: README.md
src/dxl_nano/src/: sub.cpp
src/linedetect_rapi5/: package.xml
src/linetracer_sim/: CMakeLists.txt  linetracer.cpp  package.xml
